# wayland-test

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  main_qt.cpp  test1.cpp  test2.cpp  waylandbuffer.cpp  waylandbuffer.hpp  waylandclient.cpp  waylandclient.hpp  waylandsurface.cpp  waylandsurface.hpp
src/server/: CMakeLists.txt  compositor.cpp  compositor.hpp  glcompositor.cpp  glcompositor.hpp  main.cpp  pointer.hpp  seat.cpp  seat.hpp  shell.cpp  shell.hpp  shellsurface.cpp  shellsurface.hpp  surface.cpp  surface.hpp  waylandcompositor.cpp  waylandcompositor.hpp  waylandglobalobject.cpp  waylandglobalobject.hpp  waylandoutput.hpp  waylandpointer.cpp  waylandpointer.hpp  waylandregion.cpp  waylandregion.hpp  waylandresource.cpp  waylandresource.hpp  waylandseat.cpp  waylandseat.hpp  waylandserver.cpp  waylandserver.hpp  waylandshell.cpp  waylandshell.hpp  waylandshellsurface.hpp  waylandsurface.cpp  waylandsurface.hpp  x11backend.cpp  x11backend.hpp
src/server/backend/: idisplaybackend.cpp  idisplaybackend.hpp  x11backend.hpp
src/server/wrapper/: waylandcompositor.cpp  waylandcompositor.hpp  waylandglobalobject.hpp  waylandoutput.cpp  waylandoutput.hpp  waylandpointer.cpp  waylandpointer.hpp  waylandregion.cpp  waylandregion.hpp  waylandresource.hpp  waylandseat.cpp  waylandseat.hpp  waylandshell.cpp  waylandshell.hpp  waylandshellsurface.cpp  waylandshellsurface.hpp  waylandsurface.cpp  waylandsurface.hpp
src/utils/: CMakeLists.txt  exceptions.cpp  exceptions.hpp  logger.cpp  logger.hpp  make_unique.hpp
tests/: CMakeLists.txt  nullbackend.cpp  nullbackend.hpp  test1.cpp  testclient.cpp  testclient.hpp  testobject.cpp  testobject.hpp
